<?xml version="1.0" encoding="utf-8"?><!--suppress AndroidElementNotAllowed -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Shown/hidden programmatically (see MiscSettingsFragment.updateNoWatchBannerVisibility)
         depending on whether a watch is currently paired/connected - everything below still
         works and stays configurable either way, this is just a heads-up that watch-facing
         settings won't visibly apply until a watch connects. -->
    <Preference
        android:key="no_watch_banner"
        android:icon="@drawable/ic_watch_off"
        android:title="@string/setting_no_watch_banner"
        android:summary="@string/setting_no_watch_banner_description"
        android:selectable="false"
        android:visible="false"
        android:layout="@layout/pref_item" />

    <!-- Kept first: the only category that ever needs urgent attention (a pending release), so
         it shouldn't be buried below everything else. -->
    <PreferenceCategory
        android:key="cat_updates"
        android:title="@string/category_updates"
        android:layout="@layout/pref_category_header">

        <Preference
            android:key="update_check_now"
            android:icon="@drawable/ic_autorenew"
            android:title="@string/setting_update_check_now"
            android:summary="@string/setting_update_check_now_description"
            android:layout="@layout/pref_item" />

        <com.matejdro.wearutils.preferences.compat.SwitchPreferenceEx
            android:key="update_check_enabled"
            android:icon="@drawable/ic_bell"
            android:defaultValue="true"
            android:title="@string/setting_update_check"
            android:summary="@string/setting_update_check_description"
            android:layout="@layout/pref_switch_item" />

        <com.matejdro.wearutils.preferences.compat.SwitchPreferenceEx
            android:key="update_include_prereleases"
            android:defaultValue="false"
            android:title="@string/setting_update_prereleases"
            android:summary="@string/setting_update_prereleases_description"
            android:dependency="update_check_enabled"
            android:layout="@layout/pref_switch_item" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="cat_appearance"
        android:title="@string/category_appearance"
        android:layout="@layout/pref_category_header">

        <ListPreference
            android:key="app_theme"
            android:icon="@drawable/ic_dark_mode"
            android:title="@string/setting_theme"
            android:defaultValue="system"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_entry_values"
            android:summary="%s"
            android:layout="@layout/pref_item" />

        <com.matejdro.wearutils.preferences.compat.SwitchPreferenceEx
            android:key="dynamic_accent_color"
            android:icon="@drawable/ic_colors"
            android:defaultValue="false"
            android:title="@string/setting_dynamic_accent_color"
            android:summary="@string/setting_dynamic_accent_color_description"
            android:layout="@layout/pref_switch_item" />

        <com.matejdro.wearutils.preferences.compat.SwitchPreferenceEx
            android:key="desaturated_color"
            android:defaultValue="false"
            android:title="@string/setting_desaturated_color"
            android:summary="@string/setting_desaturated_color_description"
            android:dependency="dynamic_accent_color"
            android:layout="@layout/pref_switch_item" />

        <com.svartifoss.snfell.view.settings.ColorDotPreference
            android:key="custom_accent_color"
            android:icon="@drawable/ic_palette"
            android:title="@string/setting_custom_accent_color"
            android:summary="@string/setting_custom_accent_color_description"
            android:layout="@layout/pref_item"
            android:widgetLayout="@layout/pref_widget_color_dot" />

    </PreferenceCategory>

    <!-- What the watch's now-playing screen LOOKS like (face, themes, album background,
         colors, mini-button appearance) moved to the "Watch face" tab - see
         watch_face_settings.xml / WatchFacePrefsFragment. This screen keeps behavior. -->

    <!-- Touch, crown and button behavior on the watch. -->
    <PreferenceCategory
        android:key="cat_gestures"
        android:title="@string/category_gestures"
        android:layout="@layout/pref_category_header">

        <Preference
            android:key="swipe_gestures_hint"
            android:icon="@drawable/ic_arrow_up"
            android:title="@string/setting_swipe_gestures_hint"
            android:summary="@string/setting_swipe_gestures_hint_description"
            android:layout="@layout/pref_item" />

        <com.matejdro.wearutils.preferences.compat.SwitchPreferenceEx
            android:defaultValue="false"
            android:key="wear_center_long_press_queue"
            android:icon="@drawable/ic_playlist_play"
            android:title="@string/setting_wear_center_long_press_queue"
            android:summary="@string/setting_wear_center_long_press_queue_description"
            android:layout="@layout/pref_switch_item" />

        <com.svartifoss.snfell.view.settings.ResettableNumericEditTextPreference
            android:defaultValue="300"
            android:key="rotating_crown_off_period"
            android:icon="@drawable/button_turn_ccw"
            android:title="@string/setting_rotating_crown_off_period"
            android:summary="@string/setting_rotating_crown_off_period_description"
            android:layout="@layout/pref_item" />

        <com.svartifoss.snfell.view.settings.ResettableNumericEditTextPreference
            android:defaultValue="40"
            android:key="rotating_crown_sensitivity"
            android:icon="@drawable/button_turn_cw"
            android:title="@string/setting_rotating_sensitivity"
            android:summary="@string/setting_rotating_sensitivity_description"
            android:layout="@layout/pref_item" />

        <com.svartifoss.snfell.view.settings.ResettableNumericEditTextPreference
            android:defaultValue="6"
            android:key="rotary_deadzone"
            android:icon="@drawable/button_turn_cw"
            android:title="@string/setting_rotary_deadzone"
            android:summary="@string/setting_rotary_deadzone_description"
            android:layout="@layout/pref_item" />

        <com.matejdro.wearutils.preferences.compat.SwitchPreferenceEx
            android:defaultValue="false"
            android:key="rotary_seek"
            android:icon="@drawable/action_forward_10"
            android:title="@string/setting_rotary_seek"
            android:summary="@string/setting_rotary_seek_description"
            android:layout="@layout/pref_switch_item" />

        <com.svartifoss.snfell.view.settings.ResettableNumericEditTextPreference
            android:defaultValue="1000"
            android:key="volume_overlay_timeout"
            android:icon="@drawable/action_volume_up"
            android:title="@string/setting_volume_overlay_timeout"
            android:summary="@string/setting_volume_overlay_timeout_description"
            android:layout="@layout/pref_item" />

        <com.matejdro.wearutils.preferences.compat.SwitchPreferenceEx
            android:defaultValue="false"
            android:key="disable_ambient_physical_double_click"
            android:icon="@drawable/ic_watch_off"
            android:title="@string/setting_disable_ambient_physical_double_click"
            android:summary="@string/setting_disable_ambient_physical_double_click_description"
            android:layout="@layout/pref_switch_item" />

        <com.matejdro.wearutils.preferences.compat.SwitchPreferenceEx
            android:defaultValue="true"
            android:key="haptic_feedback"
            android:icon="@drawable/ic_bolt"
            android:title="@string/setting_haptic_feedback"
            android:summary="@string/setting_haptic_feedback_description"
            android:layout="@layout/pref_switch_item" />

        <com.matejdro.wearutils.preferences.compat.SwitchPreferenceEx
            android:defaultValue="false"
            android:key="pause_on_swipe_exit"
            android:icon="@drawable/ic_music_off"
            android:title="@string/setting_pause_on_swipe_exit"
            android:summary="@string/setting_pause_on_swipe_exit_description"
            android:layout="@layout/pref_switch_item" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="cat_action_list"
        android:title="@string/category_action_list"
        android:layout="@layout/pref_category_header">

        <com.matejdro.wearutils.preferences.compat.SwitchPreferenceEx
            android:defaultValue="false"
            android:key="always_select_center_action"
            android:icon="@drawable/ic_gamepad"
            android:title="@string/setting_always_select_center_action"
            android:summary="@string/setting_always_select_center_action_description"
            android:layout="@layout/pref_switch_item" />

        <Preference
            android:key="playlist_shortcuts"
            android:icon="@drawable/ic_yt_music"
            android:title="@string/setting_playlist_shortcuts"
            android:summary="@string/setting_playlist_shortcuts_description"
            android:layout="@layout/pref_item" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="cat_automation"
        android:title="@string/category_automation"
        android:layout="@layout/pref_category_header">

        <com.matejdro.wearutils.preferences.compat.AutoSummaryListPreference
            android:defaultValue="false"
            android:key="auto_start_mode"
            android:icon="@drawable/action_play"
            android:entryValues="@array/auto_start_modes_keys"
            android:entries="@array/auto_start_modes_descriptions"
            android:title="@string/setting_auto_start"
            app:summary="%1$s"
            app:defaultValue="OFF"
            android:layout="@layout/pref_item" />

        <com.svartifoss.snfell.view.settings.MusicAppListPreference
            android:key="auto_start_apps_blacklist"
            android:icon="@drawable/ic_apps"
            android:title="@string/setting_auto_start_apps_blacklist"
            android:summary="@string/setting_auto_start_apps_blacklist_description"
            android:layout="@layout/pref_item" />

        <com.svartifoss.snfell.view.settings.ResettableNumericEditTextPreference
            android:defaultValue="0"
            android:key="close_timeout"
            android:icon="@drawable/ic_history"
            android:title="@string/setting_close_timeout"
            android:summary="@string/setting_close_timeout_description"
            android:layout="@layout/pref_item" />

    </PreferenceCategory>


    <PreferenceCategory
        android:key="cat_backup"
        android:title="@string/category_backup"
        android:layout="@layout/pref_category_header">

        <Preference
            android:key="exportConfig"
            android:icon="@drawable/ic_export"
            android:title="@string/export_config"
            android:summary="@string/export_config_description"
            android:layout="@layout/pref_item" />

        <Preference
            android:key="importConfig"
            android:icon="@drawable/ic_import"
            android:title="@string/import_config"
            android:summary="@string/import_config_description"
            android:layout="@layout/pref_item" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="cat_about"
        android:title="@string/category_about"
        android:layout="@layout/pref_category_header">

        <Preference
            android:key="version"
            android:icon="@drawable/ic_app_brand"
            android:title="@string/installed_version"
            android:layout="@layout/pref_item" />

        <Preference
            android:key="supportButton"
            android:icon="@drawable/ic_share"
            android:summary="@string/get_support_description"
            android:title="@string/get_support"
            android:layout="@layout/pref_item" />

        <Preference
            android:key="licenses"
            android:icon="@drawable/ic_open_in_new"
            android:title="@string/licenses"
            android:layout="@layout/pref_item" />

    </PreferenceCategory>

    <!-- Visível apenas após 7 cliques na versão -->
    <PreferenceCategory
        android:key="cat_developer"
        android:title="@string/category_developer"
        android:visible="false"
        android:layout="@layout/pref_category_header">

        <Preference
            android:key="dev_build_info"
            android:icon="@drawable/ic_bug_report"
            android:title="@string/dev_build_info"
            android:layout="@layout/pref_item" />


        <Preference
            android:key="dev_sync_watch"
            android:icon="@drawable/ic_send_to_mobile"
            android:title="@string/dev_sync_watch"
            android:summary="@string/dev_sync_watch_description"
            android:layout="@layout/pref_item" />

        <Preference
            android:key="dev_copy_debug_info"
            android:icon="@drawable/ic_share"
            android:title="@string/dev_copy_debug_info"
            android:summary="@string/dev_copy_debug_info_description"
            android:layout="@layout/pref_item" />

    </PreferenceCategory>

</PreferenceScreen>
