<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Formerly the "Guide" tab; the guide now lives behind the toolbar help button
         (HelpActivity) and this slot hosts the watch face customization screen. -->
    <item
        android:id="@+id/watch_face"
        android:icon="@drawable/ic_watch_vibration"
        android:title="@string/nav_watch_face" />
    <item
        android:id="@+id/controls"
        android:icon="@drawable/ic_gamepad_circle_down"
        android:title="@string/nav_controls" />
    <item
        android:id="@+id/actions_menu"
        android:icon="@drawable/ic_actions_menu"
        android:title="@string/nav_actions" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_settings" />

</menu>
